--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@vercel/analytics": "^1.4.1",
     "hono": "^4.6.20",
     "prisma": "^6.3.0"
   },
