--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "another-to-do-list-but-with-bun-hono",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "start": "bun src/index.ts",
-    "build": "bun build src/index.ts --minify --compile --outfile ./build/app"
+    "start": "bun src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
