--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "build": {
-        "env": {
-            "BUN_VERSION": "latest"
+    "version": 2,
+    "builds": [
+        {
+            "src": "src/index.ts",
+            "use": "@vercel/node"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/"
+            "dest": "src/index.ts"
         }
     ]
 }
