--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
             "src": "/api/(.*)",
             "dest": "src/index.ts"
         }
-    ]
+    ],
+    "build": {
+        "env": {
+            "BUN_VERSION": "latest"
+        }
+    }
 }
